fix: z-index on the alert message

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,6 +30,7 @@ body {
 
 a {
     text-decoration: none;
+    -webkit-text-decoration-color: white !important;
     text-decoration-color: white !important;
 }
 
@@ -67,6 +68,7 @@ img {
     -moz-border-radius: 3rem;
     -ms-border-radius: 3rem;
     -o-border-radius: 3rem;
+    z-index: 1000;
 }
 
 .alt-text-white {
@@ -83,12 +85,14 @@ img {
 }
 
 .background-image-blur {
+    -webkit-filter: blur(4px);
     filter: blur(4px);
+    -webkit-backdrop-filter: brightness(1.5);
     backdrop-filter: brightness(1.5);
 }
 
 .background-image-l-plate {
-    background-image:url('https://res.cloudinary.com/dkitley1975/image/upload/v1647605348/leannes_learners/404/ripping-l-plate.jpg');
+    background-image: url('https://res.cloudinary.com/dkitley1975/image/upload/v1647605348/leannes_learners/404/ripping-l-plate.jpg');
 }
 
 .background-image-404-image {
@@ -175,6 +179,7 @@ img {
 
 .btn-like:hover,
 .btn-like:active {
+    -webkit-animation: heart-beat 1s linear infinite;
     animation: heart-beat 1s linear infinite;
 }
 
@@ -369,11 +374,13 @@ img {
 .force-white-text-black-hover,
 .force-white-text-black-hover:active {
     color: white;
+    -webkit-text-decoration-color: white;
     text-decoration-color: white;
 }
 
 .force-white-text-black-hover:hover {
     color: black;
+    -webkit-text-decoration-color: black;
     text-decoration-color: black;
 }
 
@@ -543,6 +550,7 @@ img {
 .post-detail-author-title {
     color: var(--clr-brand-primary);
     font-size: 1.5rem;
+    -webkit-text-decoration: underline .3px solid var(--clr-brand-primary-70);
     text-decoration: underline .3px solid var(--clr-brand-primary-70);
     text-underline-offset: 3px;
 }
@@ -569,6 +577,7 @@ img {
     position: relative;
     overflow: hidden;
     overflow: hidden;
+    -webkit-clip-path: polygon(13% 0, 100% 0, 100% 100%, 33% 100%);
     clip-path: polygon(13% 0, 100% 0, 100% 100%, 33% 100%);
 }
 
@@ -657,7 +666,6 @@ img {
     transform: scale(1.2);
 }
 
-
 .tel-link {
     color: black;
 }
@@ -730,6 +738,13 @@ img {
 
 .z-index-1001 {
     z-index: 1001;
+}
+
+@-webkit-keyframes heart-beat {
+    50% {
+        opacity: .5;
+        transition-duration: .75s;
+    }
 }
 
 @keyframes heart-beat {
